<package>
  <name>random_numbers</name>
  <version>0.1.3</version>
  <description>This package generates random floating point values, integers, quaternions using boost libraries.</description>
  <author email="isucan@willowgarage.edu">Ioan Sucan</author>
  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/random_numbers</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>

  <run_depend>boost</run_depend>
</package>
