<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>random_numbers</name>
  <version>1.0.0</version>
  <description>
  This  library contains wrappers for generating floating point values, integers, quaternions using boost libraries.

  The constructor of the wrapper is guaranteed to be thread safe and initialize its random number generator to a random seed.
  Seeds are obtained using a separate and different random number generator.
  </description>
  <author email="isucan@willowgarage.edu">Ioan Sucan</author>
  <maintainer email="anasarrak@erlerobotics.com">Anas M'chichou</maintainer>
  <maintainer email="stevenragnarok@osrfoundation.org">Steven! Ragnarök</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/random_numbers</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>boost</build_depend>
  <exec_depend>boost</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
