<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>random_numbers</name>
  <version>2.0.1</version>
  <description>
  This  library contains wrappers for generating floating point values, integers, quaternions using boost libraries.

  The constructor of the wrapper is guaranteed to be thread safe and initialize its random number generator to a random seed.
  Seeds are obtained using a separate and different random number generator.
  </description>
  <maintainer email="anasarrak@erlerobotics.com">Anas M'chichou</maintainer>
  <maintainer email="stevenragnarok@osrfoundation.org">Steven! Ragnarök</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/random_numbers</url>
  <author email="isucan@willowgarage.edu">Ioan Sucan</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>libboost-dev</build_depend>
  <build_depend>libboost-date-time-dev</build_depend>
  <build_depend>libboost-random-dev</build_depend>
  <build_depend>libboost-thread-dev</build_depend>

  <build_export_depend>libboost-dev</build_export_depend>
  <build_export_depend>libboost-random-dev</build_export_depend>
  <build_export_depend>libboost-thread-dev</build_export_depend>

  <exec_depend>libboost-date-time</exec_depend>
  <exec_depend>libboost-random</exec_depend>
  <exec_depend>libboost-thread</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_cmake</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
